--- a/docker-plugin/pom.xml
+++ b/docker-plugin/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.nirima</groupId>
         <artifactId>docker-plugin-parent</artifactId>
-        <version>0.12.1</version>
+        <version>0.12.2-SNAPSHOT</version>
     </parent>
 
     <groupId>com.nirima</groupId>
